# VesnAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: .gitignore  README.md  pubspec.yaml
docs/: CLIENTS.md  DEPLOYMENT.md  GETTING_STARTED.md  LICENSING.md  OKF_PROFILE.md  REMOTE_ACCESS.md  SECURITY.md  TTS_SIDECAR.md
scripts/: check_flutter_deps.py  compose-sidecars.sh  tunnel.sh  vesnai.ps1  vesnai.sh
server/: .env.example  Dockerfile  README.md  compose-images.lock.yaml  docker-compose.yml  pyproject.toml  vesnai.cloud.example.yaml  vesnai.example.yaml
server/assets/voices/: README.md
server/config/searxng/: settings.yml
server/scripts/: check_licenses.py  gc_orphans.py  tts_probe_pl.py  write_voice_registration.py
server/tests/: conftest.py  test_ai_services.py  test_api.py  test_auto_illustrate.py  test_bundle.py  test_chat_attachments.py  test_chat_history_search.py  test_chat_image_fallback.py  test_chat_image_ingest.py  test_chat_language.py  test_chat_memory_tool.py  test_chat_persona.py  test_chat_save_to_note.py  test_chat_tool_prompt.py  test_chat_turn_queue.py  test_chatterbox_tts.py  test_config_file.py  test_conversations.py  test_crypto.py  test_discovery_ids.py  test_documents.py  test_extract_voice.py  test_feedback_api.py  test_flux_cli.py  test_image_prompts.py  test_index.py  test_live_llm_tools.py  test_marena_review.py  test_memory_review.py  test_mflux_cli.py  test_note_delete_cleanup.py  test_note_tools.py  test_notifications.py  test_okf_parse.py  test_ollama_models.py  test_openai_compat.py  test_retry_chat_action.py  test_security.py  test_selftune.py  test_sync_auth.py  (+11 more)
server/vesnai/: __init__.py  app_state.py  attachment_refs.py  auth.py  cli.py  config.py  crypto.py  discovery.py  graph.py  ids.py  jobs.py  main.py  notes.py  notifications.py  observability.py  qr.py  secrets.py  security.py  sync.py  voice_registration.py
server/vesnai/ai/: __init__.py  chat.py  chat_history_search.py  chat_image_ingest.py  chat_language.py  chat_media.py  chat_turn_queue.py  conversations.py  documents.py  enrichment.py  extract.py  image_prompts.py  index.py  marena_review.py  memory_review.py  note_tools.py  search_agent.py  selftune.py  tagging.py  tool_guardrails.py  tool_policy_review.py  tool_receipts.py  tool_schemas.py  tts_text.py  turn_action_validator.py  turn_context.py  vectorstore.py  voice.py  web_safety.py
server/vesnai/api/: __init__.py  deps.py  routes.py  schemas.py  server.py
server/vesnai/okf/: __init__.py  bundle.py  conformance.py  model.py  parse.py
server/vesnai/providers/: __init__.py  base.py  chatterbox.py  disabled.py  factory.py  fakes.py  flux.py  ollama.py  openai_compat.py  remote_tts.py  searxng.py  whisper.py
server/vesnai/runtime/: __init__.py  bootstrap.py  mflux_cli.py
(+161 files in other folders)
