[project]
name = "vesnai-server"
version = "0.1.0"
description = "VesnAI second-brain server: OKF store, sync, auth, jobs, and AI services."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "cryptography>=42.0",
    "zeroconf>=0.132",
    "typer>=0.12",
    "httpx>=0.27",
    "segno>=1.6",
]

[project.optional-dependencies]
# Heavy / optional model integrations. Not required for the test suite or CI.
# Core online stack: LLM (Ollama), vector DB client, attachment extraction.
# These are compatible with every media backend below.
ai = [
    "qdrant-client>=1.9",
    "ollama>=0.3",
    "pytesseract>=0.3.10",
    "pypdf>=4.2",
    "numpy>=1.26",
    "python-docx>=1.1",
    "reportlab>=4.2",
    "python-pptx>=1.0",
]
# FLUX image generation. mflux pins recent torch/numpy (>=2.x), which conflicts
# with Chatterbox; the two cannot share one environment (see [tool.uv] below).
image = [
    "mflux>=0.11",
]
# Chatterbox Multilingual (PL+EN voice cloning, MIT). Pins torch==2.6 / numpy<2.
chatterbox = [
    "chatterbox-tts>=0.1.7",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pip-licenses>=4.4",
    # Document export smoke tests (no torch; safe with dev-only CI sync).
    "reportlab>=4.2",
    "python-docx>=1.1",
    "python-pptx>=1.0",
]

[project.scripts]
vesnai = "vesnai.cli:app"

[tool.uv]
# chatterbox-tts pins torch==2.6/numpy<2, incompatible with mflux (FLUX).
# Keep them in separate, non-co-installed resolutions so the lockfile stays
# solvable: pick ONE combination per environment.
#   local voice: uv sync --extra ai --extra chatterbox
#   image:       uv sync --extra ai --extra image
conflicts = [
    [{ extra = "image" }, { extra = "chatterbox" }],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vesnai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -m 'not live'"
markers = [
    "live: tests that require real local models or network (opt-in, excluded by default)",
]

[tool.coverage.run]
source = ["vesnai"]
omit = ["vesnai/cli.py", "vesnai/main.py"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "B008",   # FastAPI Depends() in defaults is idiomatic
    "UP042",  # `str, Enum` is intentional for stable JSON serialization
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
